testsuite/poke.pkl/assert-diag-2.pk
/* { dg-do compile } */

/* function argument 1 has the wrong type */

assert ("foo");  /* { dg-error "" } */
